--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Bugün Seni Neden Seviyorum?</title>
+        <title>Seni Neden Seviyorum?</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0;">
         <link rel="stylesheet" href="css.css">
         <link rel="icon" type="image/x-icon" href="icon.ico">
